# microsoft_project

./: .gitignore  README.md  id.rsa  pyproject.toml  scraper.py  simple_ai_app.py  simple_ai_app.py.bak
.devcontainer/: devcontainer.json
data/: chronic_diseases_data.csv  united state_powerbi_data.csv  us-population-2010-2019-reshaped.csv
output/amazon_co_za_2024_12_10__12_24_26/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/amazon_co_za_2024_12_10__12_27_18/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_29_24/: rawData_1.md
output/www_amazon_co_za_2024_12_10__11_31_03/: rawData_1.md  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_33_43/: rawData_1.md  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_36_53/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_39_07/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_46_14/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_49_03/: rawData_1.md
output/www_amazon_co_za_2024_12_10__11_52_06/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_53_55/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
output/www_amazon_co_za_2024_12_10__11_59_12/: rawData_1.md  sorted_data_1.json  sorted_data_1.xlsx
scraper/: pyproject.toml
