[tool.poetry]
name = "ai-data-analysis-backend"
version = "0.1.0"
description = "AI Doctor - Chronic Disease Analysis System"
authors = ["Given Malebe <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.13.2,<4.0"
streamlit = "^1.38.0"
pandas = "^2.1.4"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-experimental = "^0.0.55"
langchain-community = "^0.0.38"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
lxml = "^5.1.0"
html5lib = "^1.1"
tabulate = "^0.9.0"
smolagents = "^1.9.2"
selenium = "^4.8.0"
webdriver-manager = "^4.0.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


